--- a/assets/less/bootstrap-overrides.less
+++ b/assets/less/bootstrap-overrides.less
@@ -1,3 +1,7 @@
+@import "../bootstrap/variables.less";
+@import "../bootstrap/mixins.less";
+@import "../bootstrap/utilities.less";
+
 // Variables
 @linkColor:             @black;
-@linkColorHover:        lighten(@linkColor, 15%);
+@linkColorHover:        lighten(@linkColor, 50%);
