--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -250,6 +250,9 @@ Styling for page-specific elements.
   right: 16px;
   top: 150px;
 }
+.admin-bar #close-mission {
+  top: 178px;
+}
 
 .wrapper-carousel {
   overflow: hidden;
@@ -310,7 +313,6 @@ Styling for a range of screen sizes.
 =============================================================================*/
 /* Up to landscape phone */
 @media (max-width: 480px) {
-  .mhide { display: none; }
 }
 
 /* Landscape phone to portrait tablet */
