Continued work on theme.

--- a/assets/less/bootstrap-overrides.less
+++ b/assets/less/bootstrap-overrides.less
@@ -1,7 +1,10 @@
-@import "../bootstrap/variables.less";
-@import "../bootstrap/mixins.less";
-@import "../bootstrap/utilities.less";
+@import "../bootstrap/less/variables.less";
+@import "../bootstrap/less/mixins.less";
+@import "../bootstrap/less/utilities.less";
 
 // Variables
+@forwardGreen:          #8BC758;
 @linkColor:             @black;
 @linkColorHover:        lighten(@linkColor, 50%);
+
+@btnPrimaryBackground:            @forwardGreen;
