--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -122,7 +122,7 @@ ul.horz li { display: inline-block; }
 .pictos {
   font-family: Pictos;
 }
-.wrapper-carousel:hover .control {
+.no-touch .wrapper-carousel:hover .control {
   opacity: 1.0;
 }
 .control {
