Continued mobile work.

--- a/assets/bootstrap/less/bootstrap.less
+++ b/assets/bootstrap/less/bootstrap.less
@@ -12,8 +12,9 @@
 @import "reset.less";
 
 // Core variables and mixins
-@import "variables.less"; // Modify this for custom colors, font-sizes, etc
-@import "mixins.less";
+// @import "variables.less"; // Modify this for custom colors, font-sizes, etc
+// @import "mixins.less";
+@import "../../less/bootstrap-overrides.less";
 
 // Grid system and page structure
 @import "scaffolding.less";
@@ -61,3 +62,4 @@
 
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
+@import "responsive.less";
