--- a/content/themes/forward/assets/bootstrap/less/bootstrap.less
+++ b/content/themes/forward/assets/bootstrap/less/bootstrap.less
@@ -12,9 +12,9 @@
 @import "reset.less";
 
 // Core variables and mixins
-// @import "variables.less"; // Modify this for custom colors, font-sizes, etc
-// @import "mixins.less";
-@import "../../less/bootstrap-overrides.less";
+@import "variables.less"; // Modify this for custom colors, font-sizes, etc
+@import "mixins.less";
+// @import "../../less/bootstrap-overrides.less";
 
 // Grid system and page structure
 @import "scaffolding.less";
@@ -62,4 +62,3 @@
 
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
-@import "responsive.less";
