--- a/content/themes/forward/assets/bootstrap/less/variables.less
+++ b/content/themes/forward/assets/bootstrap/less/variables.less
@@ -15,7 +15,6 @@
 @grayLighter:           #eee;
 @white:                 #fff;
 
-
 // Accent colors
 // -------------------------
 @blue:                  #049cdb;
@@ -43,10 +42,10 @@
 
 // Typography
 // -------------------------
-@baseFontSize:          13px;
-@baseFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
+@baseFontSize:          14px;
+@baseFontFamily:        'PT Sans', Helvetica, Arial, sans-serif;
 @baseLineHeight:        18px;
-@altFontFamily:         Georgia, "Times New Roman", Times, serif;
+@altFontFamily:         'EB Garamond', Georgia, Times, serif;
 
 @headingsFontFamily:    inherit; // empty to use BS default, @baseFontFamily
 @headingsFontWeight:    bold;    // instead of browser default, bold
@@ -99,7 +98,7 @@
 @dropdownBorder:                rgba(0,0,0,.2);
 @dropdownLinkColor:             @grayDark;
 @dropdownLinkColorHover:        @white;
-@dropdownLinkBackgroundHover:   @linkColor;
+@dropdownLinkBackgroundHover:   lighten(@forwardGreen, 10%);
 
 
 
