Grayscale carousel images.

--- a/content/themes/forward/assets/bootstrap/less/mixins.less
+++ b/content/themes/forward/assets/bootstrap/less/mixins.less
@@ -23,6 +23,14 @@
   animation-name: @animation;
 }
 
+.desaturate(@strength: 100%) {
+  -webkit-filter: grayscale(@strength);
+     -moz-filter: grayscale(@strength);
+      -ms-filter: grayscale(@strength);
+       -o-filter: grayscale(@strength);
+          filter: grayscale(@strength);
+}
+
 
 // UTILITY MIXINS
 // --------------------------------------------------
