--- a/content/themes/forward/assets/css/style.css
+++ b/content/themes/forward/assets/css/style.css
@@ -4424,6 +4424,23 @@ section#mission p {
   display: block;
   float: left;
   margin: 0 1px;
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  filter: grayscale(100%);
+  -webkit-transition: all 0.4s ease-in-out;
+  -moz-transition: all 0.4s ease-in-out;
+  -ms-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper-carousel .carousel img:hover {
+  -webkit-filter: grayscale(0);
+  -moz-filter: grayscale(0);
+  -ms-filter: grayscale(0);
+  -o-filter: grayscale(0);
+  filter: grayscale(0);
 }
 .wrapper-carousel .empty-text {
   margin-top: 30px;
