--- a/content/themes/forward/assets/less/style.less
+++ b/content/themes/forward/assets/less/style.less
@@ -328,6 +328,12 @@ section#mission {
       display: block;
       float: left;
       margin: 0 1px;
+      .desaturate();
+      .transition(all 0.4s ease-in-out);
+    }
+
+    img:hover {
+      .desaturate(0);
     }
   }
   .empty-text {
