--- a/content/themes/forward/assets/less/style.less
+++ b/content/themes/forward/assets/less/style.less
@@ -404,8 +404,13 @@ section#mission {
   .carousel {
     width: 2000px;
 
+    a {
+      display: block;
+      float: left;
+      margin: 0 1px;
+    }
+
     img {
-      cursor: pointer;
       display: block;
       float: left;
       margin: 0 1px;
