--- a/content/themes/forward/assets/less/style.less
+++ b/content/themes/forward/assets/less/style.less
@@ -438,6 +438,7 @@ section#mission {
 #two-forty-two {
   background-repeat: no-repeat;
   display: inline-block;
+  vertical-align: top;
   .hide-text();
 }
 
